--- a/package.json
+++ b/package.json
@@ -6,15 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hxpdong/CT313H.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hxpdong/CT313H/issues"
-  },
-  "homepage": "https://github.com/hxpdong/CT313H#readme"
+  "devDependencies": {
+    "eslint": "^8.23.1"
+  }
 }
